umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_chain-with-isotope-expected.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule_lenient
category: molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidIsotopeMass
    message: Invalid isotope mass 8 for element C
molecule_lenient:
  success: true
  summary:
    sum_formula: C5ClO
    atom_count: 7
    bond_count: 6
    property_count: 0
extended_molecule:
  success: false
  error:
    error_type: InvalidIsotopeMass
    message: Invalid isotope mass 8 for element C
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C5ClO
    atom_count: 7
    bond_count: 6
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
